--- a/index.html
+++ b/index.html
@@ -13,7 +13,25 @@
 <body>
     <!-- header start -->
     <header>
-        
+        <nav>
+            <div class="nav-main">
+                <div class="logo">
+                    <div class="logo-icon">
+                        <img src="images/icons/logo.png" alt="">
+                    </div>
+                    <div class="logo-name">
+                        <p>Idea</p>
+                    </div>
+                </div>
+                <ul class="nav-ul">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Works</a></li>
+                    <li><a href=""><img src="images/icons/profile.png" alt=""></a></li>
+                </ul>
+            </div>
+
+        </nav>
     </header>
     <!-- header end -->
     <main>
